--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -17,7 +17,7 @@
       <tr>
         <td>
           <div class="product-item">
-            <a class="product-thumb" href="#"><img src="https://loremflickr.com/640/480/food" alt="Product"></a>
+            <a class="product-thumb" href="#"><img src="{{item.image}}" alt="Product"></a>
             <div class="product-info">
               <h4 class="product-title"><a href="#">{{item.title}}</a></h4><span><em>Size:</em> 10.5</span><span><em>Color:</em> Dark Blue</span>
             </div>
