--- a/src/app/components/view/view.component.html
+++ b/src/app/components/view/view.component.html
@@ -1,7 +1,7 @@
 <section class="py-5">
   <div class="container px-4 px-lg-5 my-5" *ngIf="product">
     <div class="row gx-4 gx-lg-5 align-items-center">
-      <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="https://loremflickr.com/640/480/food" alt="..." /></div>
+      <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="{{product.image}}" alt="..." /></div>
       <div class="col-md-6" >
         <h1 class="display-5 fw-bolder">{{product.name}}</h1>
         <div class="fs-5 mb-5">
