--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
-<div>
-  <app-header></app-header>
-  <router-outlet></router-outlet>
-  <app-footer></app-footer>
+<body>
+<div id="page-container">
+  <div id="content-wrap">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+  </div>
+  <footer id="footer">
+    <app-footer></app-footer>
+  </footer>
 </div>
+</body>
