--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="py-5 bg-light">
+<footer class="py-5 bg-light page-footer mt-auto">
   <div class="container"><p class="m-0 text-center text-dark">Copyright &copy; Your Website 2022</p></div>
 </footer>
