--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,10 +1,10 @@
-<section class="py-5 bg-light">
+<section class="py-5">
   <div class="container px-2 px-lg-5 mt-5" >
     <div class="row gx-2 gx-lg-5 row-cols-2 row-cols-md-4 row-cols-xl-5 justify-content-center">
       <div class="col mb-5" *ngFor="let product of products; let i = index">
         <div class="card h-100">
           <!-- Product image-->
-          <img class="card-img-top" src="{{product.image}}" alt="..." />
+          <img class="card-img-top" src="{{product.image}}" alt="..." height="200px" width="400px"/>
           <!-- Product details-->
           <div class="card-body p-2">
             <div class="text-center">
